[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/bullet.png" type="Texture" id=1]
[ext_resource path="res://DisposeLater/Gunlet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 2 )

[node name="Bullet" type="Area2D"]
collision_layer = 10
collision_mask = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.060127, 0.147458 )
scale = Vector2( 0.535231, 0.535231 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.96046e-08 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Area2D_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
